--- a/main.tex
+++ b/main.tex
@@ -1,1 +1,53 @@
+\documentclass[conference]{IEEEtran}
+\usepackage{cite}
+\usepackage{hyperref}
+\usepackage{algorithm2e}
+\usepackage{smartdiagram}
+\usepackage{float}
+\usepackage{graphicx}
 
+\title{Perkalian Matriks}
+
+\author{\IEEEauthorblockN{1\textsuperscript{st} Muhammad Daris Nurhakim}
+\IEEEauthorblockA{\textit{School of Electrical Engineering and Informatics} \\
+\textit{Institut Teknologi Bandung}\\
+Bandung, Indonesia \\
+13220047@std.stei.itb.ac.id}
+\and
+\IEEEauthorblockN{2\textsuperscript{nd} Raihan Fadhil Yanuarsyah}
+\IEEEauthorblockA{\textit{School of Electrical Engineering and Informatics} \\
+\textit{Institut Teknologi Bandung}\\
+Bandung, Indonesia \\
+13220049@std.stei.itb.ac.id}
+\and
+\IEEEauthorblockN{3\textsuperscript{rd} Aloysius Efrata Sumaryo}
+\IEEEauthorblockA{\textit{School of Electrical Engineering and Informatics} \\
+\textit{Institut Teknologi Bandung}\\
+Bandung, Indonesia \\
+13220057@std.stei.itb.ac.id}
+}
+
+\begin{document}
+    \maketitle
+
+    \begin{abstract}
+        Ini abstrak
+        \end{abstract}
+        
+        \begin{IEEEkeywords}
+        kata kunci
+        \end{IEEEkeywords}
+
+    \section{Introduction}
+    Ini Introduction
+
+    \section{Studi Pustaka}
+    Ini studi Pustaka
+
+    \section{Metodologi Penelitian}
+
+    \section{Implementasi dan Pengujian}
+
+    \section{Kesimpulan}
+        
+\end{document}
